--- a/html/setting/daily.html
+++ b/html/setting/daily.html
@@ -48,7 +48,8 @@
       });
     $('.button button').click(function(){
         $(this).text('签到成功').addClass('succ');
-    })
+    });
+    $('body').css('height',$(document).height());
     </script>
 </body>
 
